--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -35,14 +35,16 @@ LINKER_SCRIPT_DEP:=
 SUBDIRS :=  \
 ../Appl \
 ../Drivers \
-../Header
+../Header \
+../Hal
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../Appl/Appl.c \
 ../Appl/main.c \
-../Drivers/GPIO.c
+../Drivers/GPIO.c \
+../Hal/Hal.c
 
 
 PREPROCESSING_SRCS += 
@@ -54,22 +56,26 @@ ASM_SRCS +=
 OBJS +=  \
 Appl/Appl.o \
 Appl/main.o \
-Drivers/GPIO.o
+Drivers/GPIO.o \
+Hal/Hal.o
 
 OBJS_AS_ARGS +=  \
 Appl/Appl.o \
 Appl/main.o \
-Drivers/GPIO.o
+Drivers/GPIO.o \
+Hal/Hal.o
 
 C_DEPS +=  \
 Appl/Appl.d \
 Appl/main.d \
-Drivers/GPIO.d
+Drivers/GPIO.d \
+Hal/Hal.d
 
 C_DEPS_AS_ARGS +=  \
 Appl/Appl.d \
 Appl/main.d \
-Drivers/GPIO.d
+Drivers/GPIO.d \
+Hal/Hal.d
 
 OUTPUT_FILE_PATH +=Forno_ATmega328p.elf
 
@@ -100,6 +106,13 @@ Appl/main.o: ../Appl/main.c
 	
 
 Drivers/GPIO.o: ../Drivers/GPIO.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Hal/Hal.o: ../Hal/Hal.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
