--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -36,7 +36,8 @@ SUBDIRS :=  \
 ../Appl \
 ../Drivers \
 ../Header \
-../Hal
+../Hal \
+../System
 
 
 # Add inputs and outputs from these tool invocations to the build variables 
@@ -44,7 +45,8 @@ C_SRCS +=  \
 ../Appl/Appl.c \
 ../Appl/main.c \
 ../Drivers/GPIO.c \
-../Hal/Hal.c
+../Hal/Hal.c \
+../System/Display.c
 
 
 PREPROCESSING_SRCS += 
@@ -57,25 +59,29 @@ OBJS +=  \
 Appl/Appl.o \
 Appl/main.o \
 Drivers/GPIO.o \
-Hal/Hal.o
+Hal/Hal.o \
+System/Display.o
 
 OBJS_AS_ARGS +=  \
 Appl/Appl.o \
 Appl/main.o \
 Drivers/GPIO.o \
-Hal/Hal.o
+Hal/Hal.o \
+System/Display.o
 
 C_DEPS +=  \
 Appl/Appl.d \
 Appl/main.d \
 Drivers/GPIO.d \
-Hal/Hal.d
+Hal/Hal.d \
+System/Display.d
 
 C_DEPS_AS_ARGS +=  \
 Appl/Appl.d \
 Appl/main.d \
 Drivers/GPIO.d \
-Hal/Hal.d
+Hal/Hal.d \
+System/Display.d
 
 OUTPUT_FILE_PATH +=Forno_ATmega328p.elf
 
@@ -113,6 +119,13 @@ Drivers/GPIO.o: ../Drivers/GPIO.c
 	
 
 Hal/Hal.o: ../Hal/Hal.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+System/Display.o: ../System/Display.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
