--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -46,6 +46,7 @@ C_SRCS +=  \
 ../Appl/main.c \
 ../Drivers/GPIO.c \
 ../Hal/Hal.c \
+../Hal/SevenSeg.c \
 ../System/Display.c
 
 
@@ -60,6 +61,7 @@ Appl/Appl.o \
 Appl/main.o \
 Drivers/GPIO.o \
 Hal/Hal.o \
+Hal/SevenSeg.o \
 System/Display.o
 
 OBJS_AS_ARGS +=  \
@@ -67,6 +69,7 @@ Appl/Appl.o \
 Appl/main.o \
 Drivers/GPIO.o \
 Hal/Hal.o \
+Hal/SevenSeg.o \
 System/Display.o
 
 C_DEPS +=  \
@@ -74,6 +77,7 @@ Appl/Appl.d \
 Appl/main.d \
 Drivers/GPIO.d \
 Hal/Hal.d \
+Hal/SevenSeg.d \
 System/Display.d
 
 C_DEPS_AS_ARGS +=  \
@@ -81,6 +85,7 @@ Appl/Appl.d \
 Appl/main.d \
 Drivers/GPIO.d \
 Hal/Hal.d \
+Hal/SevenSeg.d \
 System/Display.d
 
 OUTPUT_FILE_PATH +=Forno_ATmega328p.elf
@@ -119,6 +124,13 @@ Drivers/GPIO.o: ../Drivers/GPIO.c
 	
 
 Hal/Hal.o: ../Hal/Hal.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Hal/SevenSeg.o: ../Hal/SevenSeg.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
