--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -44,11 +44,13 @@ SUBDIRS :=  \
 C_SRCS +=  \
 ../Appl/Appl.c \
 ../Appl/main.c \
+../Appl/OvenTempControl.c \
 ../Drivers/ADC.c \
 ../Drivers/GPIO.c \
 ../Hal/Hal.c \
 ../Hal/SevenSeg.c \
-../System/Display.c
+../System/Display.c \
+../System/TempSensor.c
 
 
 PREPROCESSING_SRCS += 
@@ -60,38 +62,46 @@ ASM_SRCS +=
 OBJS +=  \
 Appl/Appl.o \
 Appl/main.o \
+Appl/OvenTempControl.o \
 Drivers/ADC.o \
 Drivers/GPIO.o \
 Hal/Hal.o \
 Hal/SevenSeg.o \
-System/Display.o
+System/Display.o \
+System/TempSensor.o
 
 OBJS_AS_ARGS +=  \
 Appl/Appl.o \
 Appl/main.o \
+Appl/OvenTempControl.o \
 Drivers/ADC.o \
 Drivers/GPIO.o \
 Hal/Hal.o \
 Hal/SevenSeg.o \
-System/Display.o
+System/Display.o \
+System/TempSensor.o
 
 C_DEPS +=  \
 Appl/Appl.d \
 Appl/main.d \
+Appl/OvenTempControl.d \
 Drivers/ADC.d \
 Drivers/GPIO.d \
 Hal/Hal.d \
 Hal/SevenSeg.d \
-System/Display.d
+System/Display.d \
+System/TempSensor.d
 
 C_DEPS_AS_ARGS +=  \
 Appl/Appl.d \
 Appl/main.d \
+Appl/OvenTempControl.d \
 Drivers/ADC.d \
 Drivers/GPIO.d \
 Hal/Hal.d \
 Hal/SevenSeg.d \
-System/Display.d
+System/Display.d \
+System/TempSensor.d
 
 OUTPUT_FILE_PATH +=Forno_ATmega328p.elf
 
@@ -115,6 +125,13 @@ Appl/Appl.o: ../Appl/Appl.c
 	
 
 Appl/main.o: ../Appl/main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+Appl/OvenTempControl.o: ../Appl/OvenTempControl.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
@@ -150,6 +167,13 @@ Hal/SevenSeg.o: ../Hal/SevenSeg.c
 	
 
 System/Display.o: ../System/Display.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+System/TempSensor.o: ../System/TempSensor.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
