--- a/Debug/Makefile
+++ b/Debug/Makefile
@@ -47,9 +47,11 @@ C_SRCS +=  \
 ../Appl/OvenTempControl.c \
 ../Drivers/ADC.c \
 ../Drivers/GPIO.c \
+../Drivers/Pwm.c \
 ../Hal/Hal.c \
 ../Hal/SevenSeg.c \
 ../System/Display.c \
+../System/Sounds.c \
 ../System/TempSensor.c
 
 
@@ -65,9 +67,11 @@ Appl/main.o \
 Appl/OvenTempControl.o \
 Drivers/ADC.o \
 Drivers/GPIO.o \
+Drivers/Pwm.o \
 Hal/Hal.o \
 Hal/SevenSeg.o \
 System/Display.o \
+System/Sounds.o \
 System/TempSensor.o
 
 OBJS_AS_ARGS +=  \
@@ -76,9 +80,11 @@ Appl/main.o \
 Appl/OvenTempControl.o \
 Drivers/ADC.o \
 Drivers/GPIO.o \
+Drivers/Pwm.o \
 Hal/Hal.o \
 Hal/SevenSeg.o \
 System/Display.o \
+System/Sounds.o \
 System/TempSensor.o
 
 C_DEPS +=  \
@@ -87,9 +93,11 @@ Appl/main.d \
 Appl/OvenTempControl.d \
 Drivers/ADC.d \
 Drivers/GPIO.d \
+Drivers/Pwm.d \
 Hal/Hal.d \
 Hal/SevenSeg.d \
 System/Display.d \
+System/Sounds.d \
 System/TempSensor.d
 
 C_DEPS_AS_ARGS +=  \
@@ -98,9 +106,11 @@ Appl/main.d \
 Appl/OvenTempControl.d \
 Drivers/ADC.d \
 Drivers/GPIO.d \
+Drivers/Pwm.d \
 Hal/Hal.d \
 Hal/SevenSeg.d \
 System/Display.d \
+System/Sounds.d \
 System/TempSensor.d
 
 OUTPUT_FILE_PATH +=Forno_ATmega328p.elf
@@ -152,6 +162,13 @@ Drivers/GPIO.o: ../Drivers/GPIO.c
 	@echo Finished building: $<
 	
 
+Drivers/Pwm.o: ../Drivers/Pwm.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 Hal/Hal.o: ../Hal/Hal.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -167,6 +184,13 @@ Hal/SevenSeg.o: ../Hal/SevenSeg.c
 	
 
 System/Display.o: ../System/Display.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+System/Sounds.o: ../System/Sounds.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
